<resources>
    <string name="app_name">CAR4U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone:</string>
    <string name="location">Location:</string>
    <string name="price">Price:</string>
    <string name="model">Model:</string>
    <string name="owner">Owner:</string>
    <string name="year">Year:</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
</resources>